Add github repository

--- a/_data/externalLink.yml
+++ b/_data/externalLink.yml
@@ -1,3 +1,5 @@
+- name: This page repository
+  link: https://github.com/sakuraJunior/new_homepage
 - name: PointTable2020
   link: https://japan-open-2020.sakuragumi.tk/
 - name: FIRST JAPAN
