--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,15 +4,17 @@
       link: /
     - name: メンバー
       link: /member
-    - name: cm2deg
-      link: /cm2deg
+    - title: ツール
+      docs:
+        - name: cm2deg
+          link: /cm2deg
+        - name: PointTable
+          link: https://japan-open-2020.sakuragumi.tk/
     - name: お問い合わせ
       link: /contact
 - title: 外部リンク
   docs:
     - name: This page repository
       link: https://github.com/sakuraJunior/new_homepage
-    - name: PointTable2020
-      link: https://japan-open-2020.sakuragumi.tk/
     - name: FIRST JAPAN
       link: https://firstjapan.jp/
