--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@
       link: /contact
 - title: 外部リンク
   docs:
+    - name: 桜丘中学校
+      link: http://www.setagaya.ed.jp/tsaka/
     - name: FIRST JAPAN
       link: https://firstjapan.jp/
     - name: FIRST LEGO League
